succAKM/akmLine/common/log/oldLog/runall_p2668.log.error.log
[CRITICAL]2021-03-12 16:19:53,532: import main_button failed, path: button cause a error: name 'Current_loc' is used prior to global declaration (main_button.py, line 83)
pid=2668, ppid=4608, tid=3796
Traceback (most recent call last):
  File "D:\akmLine\common\run_all.py", line 39, in findModule
    __import__(m[1])
  File "D:\akmLine\button\main_button.py", line 83
    global Current_loc
    ^
SyntaxError: name 'Current_loc' is used prior to global declaration

[CRITICAL]2021-03-12 16:19:53,540: import main_button failed, path: button ,cause name 'Current_loc' is used prior to global declaration (main_button.py, line 83)
